// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render modal with bike commute 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={200}
  contentLabel="D.C. Weather and Your Commute"
  isOpen={true}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <h2
    className="modal__message"
  >
    You're all clear; bike it.
  </h2>
  <div
    className="modal__weather-icon"
  >
    <ReactAnimatedWeather
      animate={true}
      color="black"
      icon="CLEAR_DAY"
      size={96}
    />
  </div>
  <div
    className="modal__forecast"
  >
    <span
      className="model__forecast__text"
    >
      Forecast for Washington D.C.
    </span>
    <span
      className="model__forecast__text"
    >
      12th Nov, 2017 at 8:05 PM
    </span>
    <span
      className="model__forecast__text"
    >
      clear skies
    </span>
    <span
      className="model__forecast__text"
    >
      45
       ℉
    </span>
    <span
      className="model__forecast__text"
    >
      Chance of precipitation: 
      0
      %
    </span>
    <button
      className="button button--modal"
      onClick={[Function]}
    >
      Ok
    </button>
  </div>
</Modal>
`;

exports[`should render modal with metro commute 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={200}
  contentLabel="D.C. Weather and Your Commute"
  isOpen={true}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <h2
    className="modal__message"
  >
    You're all clear; bike it.
  </h2>
  <div
    className="modal__weather-icon"
  >
    <ReactAnimatedWeather
      animate={true}
      color="black"
      icon="CLEAR_DAY"
      size={96}
    />
  </div>
  <div
    className="modal__forecast"
  >
    <span
      className="model__forecast__text"
    >
      Forecast for Washington D.C.
    </span>
    <span
      className="model__forecast__text"
    >
      Invalid date
    </span>
    <span
      className="model__forecast__text"
    >
      clear skies
    </span>
    <span
      className="model__forecast__text"
    >
      45
       ℉
    </span>
    <span
      className="model__forecast__text"
    >
      Chance of precipitation: 
      0
      %
    </span>
    <button
      className="button button--modal"
      onClick={[Function]}
    >
      Ok
    </button>
  </div>
</Modal>
`;
